manifests/archive/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: arch.homework
    http:
      paths:
        - path: /(.*)
          pathType: Prefix
          backend:
            serviceName: hello-service
            servicePort: 8000
        - path: /otusapp/sergei/(.*)
          pathType: Prefix
          backend:
            serviceName: hello-service
            servicePort: 8000
